Fixed image alignments

--- a/_sass/components/_image.scss
+++ b/_sass/components/_image.scss
@@ -68,11 +68,11 @@ img {
 
 	/* Research Summary Left 1 */
 	.researchSummaryLeft1{
-		width: 50%;
-		max-width: 50%;
-		height: 50%;
-		margin: auto;
-		padding-top: 100px;
+		width: 30%;
+		max-width: 30%;
+		height: auto;
+		padding: 3%;
+		float: right;
 	}
 
 	/* Research Summary Right 1 */
@@ -80,7 +80,8 @@ img {
 		width: 50%;
 		max-width: 50%;
 		height: 50%;
-		margin: auto;
+		padding: 3%;
+		float: right;
 	}
 
 	/* Research Summary Left 2 */
@@ -88,5 +89,6 @@ img {
 		width: 50%;
 		max-width: 50%;
 		height: 50%;
-		margin: auto;
+		padding: 3%;
+		float: right;
 	}
